<resources>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="episodes"> Episode(s)</string>
    <string name="chapters"> Chapter(s)</string>
    <string name="total_divider"> | %1$s</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="producers">Producers</string>
    <string name="external_links">External Links</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="staff">Staff</string>
    <string name="favourites">Favourites</string>
    <string name="popularity">Popularity</string>
    <string name="roles">Roles</string>
    <string name="details">Details</string>
    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
        <string name="view_profile_in_sanintv">SaninTV Profile</string>
        <string name="jobless_message">DAMN! YOU TRULY ARE JOBLESS\nYOU REACHED THE END</string>
    <string name="file_manager_not_found">Couldn\'t find a File Manager to open SD card</string>
    <string name="error_loading_data">Error loading data %1$s</string>
    <string name="long_click_to_check_update">Long click to check for app updates</string>
    <string name="saved_to_path">Saved to:\n%s</string>
    <string name="setting_progress">Setting progress to %1$d</string>
    <string name="login_anilist_account">Please Login into AniList account!</string>
    <string name="congrats_vro">Congrats Vro</string>
    <string name="please_reload">Please Reload.</string>
    <string name="copied_text">Copied "%1$s"</string>
    <string name="back_to_exit">Press BACK again to exit</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="anilist_not_found">Seems like that wasn\'t found on Anilist.</string>
    <string name="disabled_auto_skip">Disabled Auto Skipping OP &amp; ED</string>
    <string name="auto_skip">Auto Skipping OP &amp; ED</string>
    <string name="show_skip_time_stamp_button">Show Skip Time Stamp Button</string>
    <string name="always_load_time_stamps">Always Load Time Stamps</string>
    <string name="auto_hide_time_stamps">Auto Hide Time Stamps</string>
    <string name="timestamps">Segments</string>
    <string name="auto_skip_op_ed">Auto Skip OP / ED</string>
    <string name="requires_time_stamps_to_be_enabled">Requires Time Stamps to be Enabled</string>
    <string name="hide_skip_button">Make the skip time stamp button disappear after 5 seconds</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="first_episode">This is the 1st Episode!</string>
    <string name="reset_auto_update">Long click \"List Editor\" button to reset Auto Update</string>
    <string name="autoplay_cancelled">Autoplay cancelled, no interaction for more than 1 Hour.</string>
    <string name="auto_select_server_error">Couldn\'t auto select the server, Please try again!</string>
    <string name="empty_episodes_list">Episode list is empty, Please try again!</string>
    <string name="stream_selection_empty">No streams available! Try another source.</string>
    <string name="logging_in_mal">Logging into MAL</string>
    <string name="getting_user_data">Getting User Data</string>
    <string name="no_next_episode">No next episode found!</string>
    <string name="enable_banner_animations">Try enabling \"Banner Animations\" in settings</string>
    <string name="please_login_anilist">Please Login with Anilist!</string>
    <string name="auto_update_reset">Auto Update progress has now been reset-ed</string>
    <string name="cant_wait">Can\'t wait, huh? fine X(</string>
    <string name="refresh_token_load_failed">Refresh Token : Failed to load saved token</string>
    <string name="refreshing_token_failed">Refreshing Token Failed</string>
    <string name="episode_release_countdown">Episode %1$d will be released in</string>
    <string name="chapter_number">Chapter %1$d</string>
    <string name="chapter_release_timeout">%1$s has been available for</string>
    <string name="time_format">%1$d days %2$d hrs %3$d mins %4$d secs</string>
    <string-array name="sort_by">        <item>Score</item>        <item>Popular</item>        <item>Trending</item>        <item>New Releases</item>        <item>A-Z</item>        <item>Z-A</item>        <item>Pure pain</item>    </string-array>
    <string name="main_role">MAIN</string>
    <string name="supporting_role">SUPPORTING</string>
    <string name="status_finished">FINISHED</string>
    <string name="status_releasing">RELEASING</string>
    <string name="status_not_yet_released">NOT YET RELEASED</string>
    <string name="status_cancelled">CANCELLED</string>
    <string name="status_hiatus">HIATUS</string>
    <string name="type_adaptation">ADAPTATION</string>
    <string name="type_parent">PARENT</string>
    <string name="type_character">CHARACTER</string>
    <string name="type_summary">SUMMARY</string>
    <string name="type_alternative">ALTERNATIVE</string>
    <string name="type_other">OTHER</string>
    <string name="type_source">SOURCE</string>
    <string name="type_contains">CONTAINS</string>
    <string name="read_on_sanintv">Read on SaninTV</string>
    <string name="watch_on_sanintv">Watch on SaninTV</string>
    <string name="continue_episode">Continue : Episode %1$s%2$s\n%3$s</string>
    <string name="filler_tag"> - Filler</string>
    <string name="continue_chapter">Continue : %1$s\n%2$s</string>
    <string name="episode">"Episode "</string>
    <string name="episode_num">"Episode %1$s"</string>
    <string name="chapter">"Chapter "</string>
    <string name="chapter_num">"Chapter %1$s"</string>
    <string name="just_released">- Newly released!</string>
    <string name="checking_subscriptions_title">Checking Subscriptions</string>
    <string name="user_list">%1$s\'s %2$s List</string>
    <string name="speed">Speed</string>
    <string name="auto_update">Auto Update progress for %1$s?</string>
    <string name="continue_from">Continue from %1$s?</string>
    <string name="title_update_progress">Update progress on AniList?</string>
    <string name="incognito_will_not_update">Incognito mode will still ignore progress.</string>
    <string name="dont_ask_again">"Don\'t ask again for %1$s"</string>
    <string name="default_speed">Default Speed</string>
    <string name="default_resize_mode">Default Resize Mode</string>
    <string name="primary_sub_color">Primary Sub Color</string>
    <string name="outline_sub_color">Outline Sub Color</string>
    <string name="outline_type">Outline Type</string>
    <string name="subtitle_font">Subtitle Font</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>
    <string name="no_chapter">No Chapter</string>
    <string name="content_18">Turn on 18+ content from your Anilist settings</string>
    <string name="available">Available</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="cope">Cope</string>
    <string name="watched_num">"Watched "</string>
    <string name="read_num">"Read "</string>
    <string name="episodes_out_of">" out of "</string>
    <string name="chapters_out_of">" out of "</string>
    <string name="episodes_total_of">"Total of "</string>
    <string name="chapters_total_of">"Total of "</string>
    <string name="no_description_available">"No Description Available"</string>
    <string name="create_new_activity">Create New Activity</string>
    <string name="create_new_review">Create New Review</string>
    <string name="create_new_reply">Create New Reply</string>
    <string name="create_new_message">Create New Message</string>
    <string name="create">Create</string>
    <string name="preview">Preview</string>
    <string name="cannot_be_empty">Text cannot be empty</string>
    <string name="reply">Reply</string>
    <string name="replies">Replies</string>
    <string name="open_rules">Open Rules</string>
    <string name="post_to_anilist_warning">By posting to AniList, you agree to the rules and guidelines of AniList</string>
    <string name="view_subscriptions">View Subscriptions</string>
    <string name="view_subscriptions_desc">View and edit all your subscriptions</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription_deleted">Subscription Deleted</string>
    <string name="foreground_service_not_allowed">Cannot install when app is in background</string>
    <string name="ping">Ping</string>
    <string name="basic">Basic</string>
    <string name="full">Full</string>
    <string name="test_type">Test Type</string>
    <string name="extension_type">Extension Type</string>
    <string name="view_options">View Options</string>
    <string name="extension_test">Extension Test</string>
    <string name="extension_test_desc">Test if the extensions are working</string>
    <string name="start_test">Start Test</string>
    <string name="no_extensions_selected">No extensions selected</string>
    <string name="ping_success">Ping successful: %1$s ms</string>
    <string name="ping_error">Ping failed. Code: %1$s, Message: %2$s</string>
    <string name="test_not_supported">Test not supported for this extension</string>
    <string name="no_results_found">No results found. Extension may be broken</string>
    <string name="results_found">%1$s results found</string>
    <string name="title_search_test">Title Search Test: %1$s</string>
    <string name="episode_search_test">Episode Search Test: %1$s</string>
    <string name="filter_activity">Filter Activity</string>
    <string name="filter_activity_subtitle">Choose what type of activities to show</string>
    <string name="provider_sources_title">Stream Providers</string>
    <string name="provider_sources_desc">Drag to reorder. Enabled providers are tried in priority order until a stream is found.</string>
    <string name="provider_test_all_btn">Test All</string>
    <string name="provider_add_custom">Add Custom</string>
    <string name="provider_reset">Reset</string>
    <string name="provider_name_hint">Provider name</string>
    <string name="provider_url_hint">URL template</string>
    <string name="provider_url_hint_detail">Use {title} and {episode} as placeholders.\nExample: https://myapi.example.com/stream?title={title}&amp;episode={episode}\nExpected response: JSON with a "url", "stream", or "src" field.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="discover">Discover</string>
    <string name="filter_by_type">Filter by Type</string>
    <string name="genre">Genre</string>
    <string name="no_internet">No Internet</string>
    <string name="no_media_found">No media found</string>
    <string name="refresh">Refresh</string>
    <string name="sad">:(  No results</string>
</resources>