<?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent">    <FrameLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_gravity="center">        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:orientation="vertical"            android:gravity="center">            <TextView                android:id="@+id/noInternetSad"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:fontFamily="@font/poppins_thin"                android:text="@string/sad"                android:textColor="?attr/colorPrimary"                android:textSize="64sp"/>            <TextView                android:id="@+id/no_internet"                android:layout_width="200dp"                android:layout_height="wrap_content"                android:text="@string/no_internet"                android:textAlignment="center"                android:textColor="?attr/colorOnBackground"/>        </LinearLayout>        <Button            android:id="@+id/refreshButton"            android:layout_width="wrap_content"            android:layout_height="64dp"            android:layout_gravity="bottom|center_horizontal"            android:layout_margin="128dp"            android:fontFamily="@font/poppins_bold"            android:maxLines="1"            android:text="@string/refresh"            app:cornerRadius="16dp"            app:icon="@drawable/ic_round_refresh_24" />    </FrameLayout></FrameLayout>